--- a/chrome_hackathon/manifest.json
+++ b/chrome_hackathon/manifest.json
@@ -5,9 +5,7 @@
   "version": "1.0",
   "permissions": [
     "downloads",
-    "activeTab",
-    "http://*/",
-    "https://*/"
+    "activeTab"
   ],
   "background": {
     "service_worker": "background.js"
